--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -1,4 +1,4 @@
-.question{
+.question {
   background: #fefefe;
   border-radius: 8px;
   box-shadow: 0 2px 12px rgba(0,0,0,0.4);
@@ -8,7 +8,20 @@
     margin-top: 8px;
   }
 
-  p{
+  &.highlighted {
+    background: #F4F0FF;
+    border: 1px solid #835AFD;
+
+    footer .user-info span{
+      color: #29292e;
+    }
+  }
+
+   &.answered {
+    background: #DBDCDD;
+  }
+
+  p {
     color: #29292e;
   }
 
@@ -34,31 +47,36 @@
         font-size: 14px;
       }
     }
-  }
 
-  button{
-    border: 0;
-    background: none;
-    cursor: pointer;
-    transition: filter 0.2s;
-
-    &.like-button {
+    > div {
       display: flex;
-      align-items: flex-end;
-      color: #737380;
-      gap:8px;
-
-      &.liked {
-        color: #835afd;
-
-        svg path{
-          stroke: #835afd;
-        }
-      }
+      gap: 16px;
     }
 
-    &:hover{
-      filter: brightness(0.7)
+    button{
+      border: 0;
+      background: none;
+      cursor: pointer;
+      transition: filter 0.2s;
+
+      &.like-button {
+        display: flex;
+        align-items: flex-end;
+        color: #737380;
+        gap:8px;
+
+        &.liked {
+          color: #835afd;
+
+          svg path{
+            stroke: #835afd;
+          }
+        }
+      }
+
+      &:hover{
+        filter: brightness(0.7)
+      }
     }
   }
 }
