--- a/src/pages/Room/styles.scss
+++ b/src/pages/Room/styles.scss
@@ -1,30 +1,8 @@
 #page-room {
+  padding-bottom: 16px;
   header {
     padding: 20px;
     border-bottom: 1px solid #e2e2e2;
-
-    .content {
-      max-width: 1120px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-      > img {
-        max-height: 45px;
-        cursor: pointer;
-      }
-
-      > div {
-        display:flex;
-        gap: 16px;
-
-        button {
-          height: 40px;
-        }
-
-      }
-    }
   }
 
   main {
